# MyArtCollection

./: .env.local.example  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  README.md  analysis_options.yaml  firebase.json  firestore.play-billing.indexes.json  l10n.yaml  pubspec.yaml
.github/: CODEOWNERS
android/: .gitignore  gradle.properties
android/app/src/main/cpp/: AttachmentCustody.cpp  CMakeLists.txt
docs/: AI_ART_RESEARCH_SPEC.md  AI_BACKEND_KILL_SWITCH_RUNBOOK.md  AI_BROKER_AUTH_AND_QUOTA_SPEC.md  AI_BROKER_PAYLOAD_AND_TELEMETRY_SPEC.md  AI_FAKE_BROKER_RUNBOOK.md  AI_PROVIDER_DATA_AND_SOURCE_RIGHTS_SPEC.md  APPLE_APP_STORE_TESTFLIGHT_READINESS_SPEC.md  ARCHITECTURE.md  ARCHIVALE_ARCHIVE_V1.md  ARCHIVALE_ARCHIVE_V2.md  ARCHIVALE_BLOG_EDITORIAL_PLAN.md  ARTWORK_RECORD_SCHEMA.md  ATTACHMENT_CUSTODY_API_V1.md  COPY_TRUST_SPEC.md  COSTED_AI_BACKEND_GATE_SPEC.md  FIREBASE_APP_DISTRIBUTION.md  FIREBASE_TELEMETRY_POLICY.md  GOOGLE_PLAY_LISTING_PREP.md  GOOGLE_PLAY_STORE_READINESS_SPEC.md  GTM_PLAN.md  LOCAL_STORAGE_SPEC.md  MARKETING_SYSTEM_SPEC.md  MOBILE_IA.md  MVP_TASKS.md  NORTH_STAR.md  ON_DEVICE_AI_ANDROID_SPIKE.md  PLAY_BILLING_GATE_SPEC.md  PRODUCT_PLAN.md  PROTOTYPE_STORYBOARD.md  RELEASE_POLICY_TRUST.md  RELEASE_POLICY_WORKERS_ROLLBACK.md  RELEASE_READINESS_CI.md  SECRET_HYGIENE.md  SUPPORTING_RECORD_ATTACHMENT_EXPORT_CONTRACT_V1.md  VALUE_TAXONOMY_SPEC.md  issue-32-localization-inventory.md
lib/: main.dart
release-notes/: internal-testers.md
scripts/: check_android_ci_inputs.sh  check_apple_build_commands.sh  check_broker_audit.mjs  (+7 more)
(+411 files in other folders)
